# PICASSO

./: pyproject.toml
notebooks/: example_notebook.ipynb
picasso/: CloneTree.py  __init__.py  build_tree.py  itol_utils.py  utils.py
sample_data/: cnas.txt
tests/: test_build_tree.py
