[tool.poetry]
name = "picasso"
version = "0.1.0"
description = ""
authors = ["sitarapersad <sitara.persad@columbia.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pomegranate = "^1.0.4"
jupyter = "^1.0.0"
pandas = "^2.2.2"
seaborn = "^0.13.2"
tqdm = "^4.66.4"
ete3 = "^3.1.3"
pyqt5 = "^5.15.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
